--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Bikcraft - Bicicletas Elétricas</title>
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
     <link rel="stylesheet" href="/styles.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header-bg">
@@ -24,5 +28,17 @@
         </nav>
     </div>
 </header>
+<main class="introducao-bg">
+    <div class="introducao">
+        <div class="introducao-conteudo">
+        <h1>Bicicletas feitas sob medida<span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicicletas.html">Escolha a sua</a>
+    </div>
+    <div class="introducao-imagem">
+     <img src="/img/fotos/introducao.jpg" alt="Bicicleta Elétrica preta">
+    </div>
+</div>
+</main>
 </body>
 </html>
